name:                subtyping
version:             0.1.0.0
author:              Reuben Steenekamp
maintainer:          reuben.steenekamp@gmail.com
copyright:           2016 Reuben Steenekamp
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     REPL
  other-modules:       AST, Print, Eval, Type, Parser, Lexer
  build-depends:       base >= 4.7 && < 5
                     , parsec >= 3.1 && < 3.2
                     , containers >= 0.5 && < 0.6
                     , mtl >= 2.2 && < 2.3
  default-language:    Haskell2010

executable subtyping
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , subtyping
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/badly-drawn-wizards/tapl-subtyping
